[package]
name = "lnurl_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
lnurl-rs = "0.9"

# lnurl-rs 0.9 calls bitcoin::secp256k1::rand::random, which needs rand-std.
bitcoin = { version = "0.32.2", default-features = false, features = ["rand-std"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
